# vokselis_xor_standalone

./: Cargo.toml  README.md
examples/xor_single/src/: main.rs
shaders/: present.wgsl  raycast_compute.wgsl  raycast_naive.wgsl  shader_with_camera.wgsl  xor.wgsl
src/: camera.rs  context.rs  main.rs
src/context/: global_ubo.rs  hdr_backbuffer.rs  present_pipeline.rs  volume_texture.rs
src/context/pipelines/: basic_with_camera.rs  mod.rs
src/pipeline/: mod.rs  raycast.rs
src/pipelines/: mod.rs  raycast.rs  xor_compute.rs
src/utils/: frame_counter.rs  input.rs  mod.rs
