[package]
name = "vokselis_xor_standalone"
version = "0.1.0"
edition = "2021"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
license = "MIT"
description = "Vokselis project but for the latest version of wgpu."
repository = "https://github.com/pudnax/vokselis/"
readme = "README.md"
keywords = ["graphics", "voxels", "wgpu", "shaders", "creative"]
exclude = [".gitignore", "examples", ".github"]
categories = ["graphics", "rendering"]

[dependencies]
bytemuck = { version = "1.7", features = ["derive"] }
env_logger = "0.11"
glam = { version = "0.27", features = ["bytemuck"] }
pollster = "0.3"
wgpu = "0.19"
winit = { version = "0.29", default-features = false, features = ["rwh_06", "x11", "wayland", "wayland-dlopen"] }
